# RayTracingIn1WeekendPractice

./: CMakeLists.txt  README.md
app/: BaseApplication.cpp  BaseApplication.h  Camera.cpp  Camera.h  FrameRateCounter.cpp  FrameRateCounter.h  Hitable.h  HitableList.cpp  HitableList.h  Image.cpp  Image.h  InputManager.cpp  InputManager.h  Log.cpp  Log.h  Paths.h  RTCamera.h  RTMaterial.h  Ray.h  Sphere.cpp  Sphere.h  TimeManager.cpp  TimeManager.h  Vec3f.cpp  Vec3f.h
app/gl/: ShaderProgram.cpp  ShaderProgram.h  Texture2D.cpp  Texture2D.h  WorldGridRenderer.cpp  WorldGridRenderer.h
assets/shader/: shader.frag  shader.vert
src/1.Program1/: Program1.cpp  shader.vert
src/1.test/: Test.cpp
src/2.Program2/: Program2.cpp
src/3.Antialiasing/: Antialiasing.cpp
src/4.DiffuseMaterials/: DiffuseMaterials.cpp
src/5.MetalMaterials/: MetalMaterials.cpp
src/6.DielectricMaterials/: DielectricMaterials.cpp
src/7.RandomScene/: RandomScene.cpp
src/8.OGLRT/: OGLRT.cpp  shader.frag  shader.vert
tests/TestImage/: TestStbImageWrite.cpp
